# not_yet-level-editor

./: .gitignore  .gitmodules  CMakeLists.txt
.cache/clangd/index/: SDL.c.32410CD727471D47.idx  SDL.h.F641A70B7AFBBB73.idx  SDL_RLEaccel.c.60BBCEEFF1E97389.idx  SDL_RLEaccel_c.h.9901E895EA16812D.idx  SDL_alsa_audio.c.6762CBD8B79F4AA1.idx  SDL_alsa_audio.h.C27528FE5FA5FBFD.idx  SDL_assert.c.54A993C13F0290F7.idx  SDL_assert.h.EEE48AD0BA6BD30C.idx  SDL_assert_c.h.E1285B170FF3FA0A.idx  SDL_atomic.c.42D12D8217C31176.idx  SDL_atomic.h.C5E9B2C71827191A.idx  SDL_audio.c.920F3B236EA22EA5.idx  SDL_audio.h.63898434388D3C7E.idx  SDL_audio_c.h.775BE9A57E0C4D96.idx  SDL_audio_channel_converters.h.E29C7C558A4AD44D.idx  SDL_audio_resampler_filter.h.0A8A924D96A3186B.idx  SDL_audiocvt.c.E81BFA9E70D6FDEC.idx  SDL_audiodev.c.F8418019122135AB.idx  SDL_audiodev_c.h.F06DB4A92286D4FE.idx  SDL_audiotypecvt.c.51FA0EAB535F267F.idx  SDL_blendfillrect.c.3EA0099980EF75F3.idx  SDL_blendfillrect.h.61525C6CC4B3348D.idx  SDL_blendline.c.20F20339440A205A.idx  SDL_blendline.h.67204D4FECA0E505.idx  SDL_blendmode.h.E087990E49B0D4FB.idx  SDL_blendpoint.c.355E0CC872EC40A1.idx  SDL_blendpoint.h.A7E40D70CCC55182.idx  SDL_blit.c.AE4FC7603BD73379.idx  SDL_blit.h.10D0FA32AC78FEBE.idx  SDL_blit_0.c.39D7030E8E5040DB.idx  SDL_blit_1.c.26EB91CEC7AB851F.idx  SDL_blit_A.c.7E36E7E9C3029646.idx  SDL_blit_N.c.CD0F923D3E776063.idx  SDL_blit_auto.c.100B8177792B4865.idx  SDL_blit_auto.h.F346FC0353B1F4D3.idx  SDL_blit_copy.c.37CD597E0AF76F95.idx  (+442 more)
header/: SDL_prims.h
source/: SDL_prims.cpp  level_editor.cpp
